--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Login{% endblock %}
-
+{% load form_tags %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-4">
@@ -12,7 +12,14 @@
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    <div class="mb-3">
+                        <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
+                        {{ form.username|add_class:"form-control" }}
+                    </div>
+                    <div class="mb-3">
+                        <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
+                        {{ form.password|add_class:"form-control" }}
+                    </div>
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
             </div>
