--- a/templates/expenses/expense_list.html
+++ b/templates/expenses/expense_list.html
@@ -62,6 +62,28 @@
             </tbody>
         </table>
 
+        <h2 class="mt-4">Transfers Between Sisters</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Sender</th>
+                    <th>Receiver</th>
+                    <th>Amount, USD</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for transfer in transfers %}
+                <tr>
+                    <td>{{ transfer.date }}</td>
+                    <td>{{ transfer.sender.username }}</td>
+                    <td>{{ transfer.receiver.username }}</td>
+                    <td>{{ transfer.amount }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
         <p><a class="btn btn-success mt-4" href="{% url 'add_expense' %}">Add Expense</a></p>
     </div>
 
