Update styles of one of tables in espense_list.html

--- a/templates/expenses/expense_list.html
+++ b/templates/expenses/expense_list.html
@@ -63,8 +63,8 @@
         </table>
 
         <h2 class="mt-4">Transfers Between Sisters</h2>
-        <table class="table">
-            <thead>
+        <table class="table table-bordered table-hover">
+            <thead class="table-success">
                 <tr>
                     <th>Date</th>
                     <th>Sender</th>
