--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
 
     <style>
+        html,
+        body {
+        min-height: 100vh;
+        }
+
+        body {
+        background-color: #f5f5f5;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        align-content: center;
+        justify-content: center;
+        }
+
+        main {
+        flex: 1 0 auto;
+        }
+
         .active-nav-link {
             color: orange !important; /* Цвет активного пункта меню */
         }
@@ -62,9 +80,11 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        {% block content %}{% endblock %}
-    </div>
+    <main class="container">
+        <div class="container mt-4">
+            {% block content %}{% endblock %}
+        </div>
+    </main>
 
     <footer class="bg-success text-white mt-5 p-4 text-center">
         &copy; 2024
