--- a/templates/expenses/expense_list.html
+++ b/templates/expenses/expense_list.html
@@ -3,6 +3,16 @@
 {% block title %}Expenses{% endblock %}
 
 {% block content %}
+{% if messages %}
+<div class="container mt-4">
+    {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show" role="alert">
+            <h4 class="text-danger">{{ message }}</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+</div>
+{% endif %}
 <div class="row">
     <!-- Main Tables on the Left -->
     <div class="col-md-7">
@@ -85,7 +95,7 @@
             </tbody>
         </table>
 
-        <p><a class="btn btn-success mt-4" href="{% url 'add_expense' %}">Add Expense</a></p>
+        <p><a class="btn btn-success btn-lg mt-4" href="{% url 'add_expense' %}">Add Expense</a></p>
     </div>
 
     <!-- Analytics on the Right -->
@@ -135,7 +145,7 @@
             <h3>Привет, {{ user.username }}!<br> Хорошего тебе дня!</h3>
         </div>
         {% endif %}
-        <div class="alert alert-success mt-4">
+        <div class="alert alert-warning mt-4">
             <h3>Here's a Joke for You!</h3>
             {% if joke.setup and joke.punchline %}
                 <p><strong>{{ joke.setup }}</strong></p>
